--- a/layer.yaml
+++ b/layer.yaml
@@ -1,13 +1,19 @@
 defines:
-  packages:
-    type: array
-    default: []
-    description: Additional packages to be installed at time of bootstrap
-  version_package:
-    type: string
-    default: ''
-    description: Set application version from this apt package
-  full_version:
-    type: boolean
-    default: False
-    description: Use the full Debian version number from version_package
+    packages:
+        type: array
+        default: []
+        description: Additional packages to be installed at time of bootstrap
+    version_package:
+        type: string
+        default: ''
+        description: Set application version from this apt package
+    full_version:
+        type: boolean
+        default: False
+        description: Use the full Debian version number from version_package
+    keys:
+        type: array
+        default: []
+        description: >
+            Paths to GPG archive signing keys to automatically add,
+            relative to $CHARM_DIR.
